adding a quick about me paragraph and changing small things

--- a/about.html
+++ b/about.html
@@ -50,17 +50,7 @@
 
                 <h1 class=" header2">About Me</h2>
 
-                <p>The Switch is designed to fit your life, transforming from home console to portable system in a snap.
-                    Dock your system to enjoy HD gaming on your TV. Flip the stand to share the screen, then share the
-                    fun with a multiplayer game. Pick it up and play with the Joy-Con™ controllers attached to enjoy the
-                    6.2" LCD touch screen. </p>
-
-                <p>
-                    The included Joy‑Con controllers give you total gameplay flexibility. One controller or two,
-                    vertical or sideways, attached to the console or separate. You can play multiple ways, depending on
-                    the game. Flip the stand to share the screen, then share the fun with a multiplayer game. HD Rumble
-                    puts you in the game with physical feedback, while the IR Motion Camera opens up new experiences.
-                    Play on the big screen at home with friends.</p>
+                <p>Hey there, I'm YuFeng a fourth-year student studying Intrative Arts and Technology at Simon Fraser University From an early age, I've been fascinated by the fusion of technology and design, and I've always sought ways to enhance user experiences. Through my studies and practical experiences, I've honed my eye for aesthetics and developed a deep passion for crafting seamless digital interactions. I'm eager to stay ahead of emerging trends and collaborate with peers in this ever-evolving field. My ultimate goal is to work with a tech company that values user-centric design, creating products that leave a lasting impact and delight users worldwide. As graduation nears, I'm excited to embrace new challenges and make my mark in the world of UX/UI design.</p>
                 <br>
 
             </div>
@@ -73,18 +63,18 @@
             <div class="container">
                 <div class="section about me">
                     <h2 class="header2">About Me</h2>
-                    <p>Hello, I'm YuFeng. Currently studying Intrative Arts and Technology at Simon Fraser University.</p>
-                    <p>Copyright ©2023 YuFeng Diao. All Rights Reserved.</p>
+                    <p>Hey there, I'm YuFeng. Currently studying Intrative Arts and Technology at Simon Fraser University.</p>
+                    <p>Copyright ©2023 YuFeng Diao. All Rights Reserved. </p>
                 </div>
                 <div class="section quicklinks">
                 </div>
                 <div class="section quicklinks">
-                    <h2 class="header2">Shop</h2>
+                    <h2 class="header2">Content</h2>
                     <ul>
-                        <li><a href="games.html">Games</a></li>
-                        <li><a href="consoles.html">Consoles</a></li>
-                        <li><a href="accessories.html">Accessories</a></li>
-                        <li><a href="cart.html">Cart</a></li>
+                        <li><a href="index.html">StyleGuide</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
                     </ul>
                 </div>
                 <div class="section contact">
