--- a/home.html
+++ b/home.html
@@ -56,12 +56,12 @@
                 <div class="section quicklinks">
                 </div>
                 <div class="section quicklinks">
-                    <h2 class="header2">Shop</h2>
+                    <h2 class="header2">Content</h2>
                     <ul>
-                        <li><a href="games.html">Games</a></li>
-                        <li><a href="consoles.html">Consoles</a></li>
-                        <li><a href="accessories.html">Accessories</a></li>
-                        <li><a href="cart.html">Cart</a></li>
+                        <li><a href="index.html">StyleGuide</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
                     </ul>
                 </div>
                 <div class="section contact">
