added sub pages for the 2 process analyses

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,6 @@
                 <h2 class=" header2">BOOOOOOOM</h2>
                 <h3 class="header3">Web Design and Branding</h3>
                 <a class="button-nav" href="booooooom.html">Learn More</a>
-                <input class="button-nav" type="reset" value="Add to Cart">
                 <br>
 
             </div>
@@ -62,7 +61,6 @@
                 <h2 class="header2">ninteneleven</h2>
                 <h3 class="header3">Web Development and Design</h3>
                 <a class="button-nav" href="ninteneleven.html">Learn More</a>
-                <input class="button-nav" type="reset" value="Add to Cart">
                 <br>
             </div>
 
@@ -73,45 +71,34 @@
 
     <footer> <!-- Footer learned from https://youtu.be/JViuPwlP1mU-->
         <div class="container">
-            <div class="section about us">
-                <h2 class="header2">About Us</h2>
-                <p>Ninteneleven develops, manufactures and sells electronic home entertainment products. The company
-                    develops hardware and software for handheld and home console video game systems, with support from
-                    various companies and organizations.</p>
-                <p>Copyright ©2023 ninteneleven. All Rights Reserved.</p>
+            <div class="section about me">
+                <h2 class="header2">About Me</h2>
+                <p>Hello, I'm YuFeng. Currently studying Intrative Arts and Technology at Simon Fraser University.</p>
+                <p>Copyright ©2023 YuFeng Diao. All Rights Reserved.</p>
             </div>
             <div class="section quicklinks">
-                <h2 class="header2">Support</h2>
-                <ul>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Help</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
             </div>
             <div class="section quicklinks">
-                <h2 class="header2">Shop</h2>
+                <h2 class="header2">Content</h2>
                 <ul>
-                    <li><a href="games.html">Games</a></li>
-                    <li><a href="consoles.html">Consoles</a></li>
-                    <li><a href="accessories.html">Accessories</a></li>
-                    <li><a href="cart.html">Cart</a></li>
+                    <li><a href="index.html">StyleGuide</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
                 </ul>
             </div>
             <div class="section contact">
-                <h2 class="header2">Contact Us</h2>
+                <h2 class="header2">Contact Me</h2>
                 <ul class="info">
                     <li>
-                        <p><a href="tel:12345678900">+1 234 567 8900</a></p>
+                        <p><a href="tel:12345678900">+1 778 903 7988</a></p>
                     </li>
                     <li>
-                        <p><a href="mailto:ninteneleven@gamail.com">ninteneleven@gamail.com</a></p>
+                        <p><a href="mailto:yda58@sfu.ca">yda58@sfu.ca</a></p>
                     </li>
-                </ul>
-
+                </ul> 
             </div>
         </div>
     </footer>
 </body>
-
 </html>
