added new portfolio style that I was testing
included: style guide, home, about

--- a/about.html
+++ b/about.html
@@ -1,94 +1,53 @@
 <!DOCTYPE html>
-
-
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/main.css"/>
-        <link rel="stylesheet" href="css/grid.css">
-        <link rel="stylesheet" href="css/normalize.css"/>
-        <link rel="stylesheet" href="css/fonts.css">
-        <title>YuFeng's Portfolio</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>YuFeng's Porfolio</title>
+    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/main.css"> -->
+    <link rel="stylesheet" href="css/fonts.css">
+
+    <!-- Icon from https://github.com/atisawd/boxicons-->
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 </head>
 <body>
-        <div class="nav-wrapper">
-            <div class="logo-container">
-                <h1 class="logo">YuFeng Diao.</h1>
-            </div>
-            <nav>
-                <input class="hidden" type="checkbox" id="menuToggle">
-                <label class="menu-btn" for="menuToggle">
-                    <div class="menu"></div>
-                    <div class="menu"></div>
-                    <div class="menu"></div>
-                </label>
-                <div class="nav-container">
-                    <ul class="nav-tabs">
-                        <a class="nav-tab" href="index.html" style="text-decoration-line: none">StyleGuide</a>
-                        <a class="nav-tab" href="home.html" style="text-decoration-line: none">Home</a>
-                        <a class="nav-tab" href="about.html" style="text-decoration-line: none">About</a>
-                        <a class="nav-tab" href="services.html" style="text-decoration-line: none">Services</a>
-                        <a class="nav-tab" href="portfolio.html" style="text-decoration-line: none">Portfolio</a>
-                        <a class="nav-tab" href="contact.html" style="text-decoration-line: none">Contact</a>
-                    </ul>
-                </div>
-            </nav>
-        </div>   
     
+    <!-- Header -->
+    <header>
+        <a href="#" class="logo"> YuFeng.</a> 
 
-        <div class="box">
+        <ul class="navlist">
+            <li><a href="home.html" class="active">Home</a></li>
+            <li><a href="index.html">StyleGuide</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#portfolio">Porfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+        
+        <!-- Hamburger icon-->
+        <div class="bx bx-menu" id="menu-icon">
 
-            <div class="box-item product-item-border">
+        </div>
+    </header>
 
-                <img src="img/user.jpg" alt="Switch Gaming Console" width="50%" style="border-radius: 1rem;">
-
-            </div>
-
-            <div class="box-item product-item-border">
-
-                <h1 class=" header2">About Me</h2>
-
-                <p>Hey there, I'm YuFeng a fourth-year student studying Intrative Arts and Technology at Simon Fraser University From an early age, I've been fascinated by the fusion of technology and design, and I've always sought ways to enhance user experiences. Through my studies and practical experiences, I've honed my eye for aesthetics and developed a deep passion for crafting seamless digital interactions. I'm eager to stay ahead of emerging trends and collaborate with peers in this ever-evolving field. My ultimate goal is to work with a tech company that values user-centric design, creating products that leave a lasting impact and delight users worldwide. As graduation nears, I'm excited to embrace new challenges and make my mark in the world of UX/UI design.</p>
-                <br>
-
-            </div>
+    <!-- About Section -->
+    <section class="about" id="about">
+        <div class="aboutimg">
+            <img src="img/user.jpg">
         </div>
 
+        <div class="aboutinfo">
+            <h2>About Me</h2>
+            <h4>UI/UX Designer!</h4>
+            <p>Hey there, I'm YuFeng a fourth-year student studying Intrative Arts and Technology at Simon Fraser University. From an early age, I've been fascinated by the fusion of technology and design, and I've always sought ways to enhance user experiences. Through my studies and practical experiences, I've honed my eye for aesthetics and developed a deep passion for crafting seamless digital interactions. I'm eager to stay ahead of emerging trends and collaborate with peers in this ever-evolving field. My ultimate goal is to work with a tech company that values user-centric design, creating products that leave a lasting impact and delight users worldwide. As graduation nears, I'm excited to embrace new challenges and make my mark in the world of UX/UI design.</p>
+            <button class="button">Contact Me</button><br>
 
+        </div>
+    </section>
 
-
-        <footer> <!-- Footer learned from https://youtu.be/JViuPwlP1mU-->
-            <div class="container">
-                <div class="section about me">
-                    <h2 class="header2">About Me</h2>
-                    <p>Hey there, I'm YuFeng. Currently studying Intrative Arts and Technology at Simon Fraser University.</p>
-                    <p>Copyright ©2023 YuFeng Diao. All Rights Reserved. </p>
-                </div>
-                <div class="section quicklinks">
-                </div>
-                <div class="section quicklinks">
-                    <h2 class="header2">Content</h2>
-                    <ul>
-                        <li><a href="index.html">StyleGuide</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="services.html">Services</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                    </ul>
-                </div>
-                <div class="section contact">
-                    <h2 class="header2">Contact Me</h2>
-                    <ul class="info">
-                        <li>
-                            <p><a href="tel:12345678900">+1 778 903 7988</a></p>
-                        </li>
-                        <li>
-                            <p><a href="mailto:yda58@sfu.ca">yda58@sfu.ca</a></p>
-                        </li>
-                    </ul> 
-                </div>
-            </div>
-        </footer>
+    <!-- Js -->
+    <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
