--- a/home.html
+++ b/home.html
@@ -1,81 +1,67 @@
 <!DOCTYPE html>
-
-
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/main.css"/>
-        <link rel="stylesheet" href="css/grid.css">
-        <link rel="stylesheet" href="css/normalize.css"/>
-        <link rel="stylesheet" href="css/fonts.css">
-        <title>YuFeng's Portfolio</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>YuFeng's Porfolio</title>
+    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/main.css"> -->
+    <link rel="stylesheet" href="css/fonts.css">
+
+    <!-- Icon from https://github.com/atisawd/boxicons-->
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 </head>
 <body>
-    <div id="header">
-        <div class="nav-wrapper">
-            <div class="logo-container">
-                <h1 class="logo">YuFeng Diao.</h1>
-            </div>
-            <nav>
-                <input class="hidden" type="checkbox" id="menuToggle">
-                <label class="menu-btn" for="menuToggle">
-                    <div class="menu"></div>
-                    <div class="menu"></div>
-                    <div class="menu"></div>
-                </label>
-                <div class="nav-container">
-                    <ul class="nav-tabs">
-                        <a class="nav-tab" href="index.html" style="text-decoration-line: none">StyleGuide</a>
-                        <a class="nav-tab" href="home.html" style="text-decoration-line: none">Home</a>
-                        <a class="nav-tab" href="about.html" style="text-decoration-line: none">About</a>
-                        <a class="nav-tab" href="services.html" style="text-decoration-line: none">Services</a>
-                        <a class="nav-tab" href="portfolio.html" style="text-decoration-line: none">Portfolio</a>
-                        <a class="nav-tab" href="contact.html" style="text-decoration-line: none">Contact</a>
-                    </ul>
-                </div>
-            </nav>
-        </div>   
+    
+    <!-- Header -->
+    <header>
+        <a href="#" class="logo"> YuFeng.</a> 
+
+        <ul class="navlist">
+            <li><a href="home.html" class="active">Home</a></li>
+            <li><a href="index.html">StyleGuide</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#portfolio">Porfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
         
-        <div class="header-text">
-            <p>UI/UX Designer</p>
-            <h1>Hi, I'm <span>YuFeng</span> Diao</h1>
-            <h2>Studying Interactive Design <br> At Simon Fraser University</h2>
+        <!-- Hamburger icon-->
+        <div class="bx bx-menu" id="menu-icon">
 
         </div>
-    </div>
+    </header>
 
-        <footer> <!-- Footer learned from https://youtu.be/JViuPwlP1mU-->
-            <div class="container">
-                <div class="section about me">
-                    <h2 class="header2">About Me</h2>
-                    <p>Hello, I'm YuFeng. Currently studying Intrative Arts and Technology at Simon Fraser University.</p>
-                    <p>Copyright ©2023 YuFeng Diao. All Rights Reserved.</p>
-                </div>
-                <div class="section quicklinks">
-                </div>
-                <div class="section quicklinks">
-                    <h2 class="header2">Content</h2>
-                    <ul>
-                        <li><a href="index.html">StyleGuide</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="services.html">Services</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                    </ul>
-                </div>
-                <div class="section contact">
-                    <h2 class="header2">Contact Me</h2>
-                    <ul class="info">
-                        <li>
-                            <p><a href="tel:12345678900">+1 778 903 7988</a></p>
-                        </li>
-                        <li>
-                            <p><a href="mailto:yda58@sfu.ca">yda58@sfu.ca</a></p>
-                        </li>
-                    </ul> 
-                </div>
+    <!-- Home Section -->
+    <section class="home" id="home">
+        <div class="home-text">
+            <div class="slide">
+                <span class="one">Hello</span>
+                <span class="two">I'm</span>
             </div>
-        </footer>
+            <h1>YuFeng</h1>
+            <h3>UI/UX<span> Designer.</span></h3>
+            <p>Currently a fourth-year student studying Intrative Arts and Technology at Simon Fraser University</p>
+            <div></div>
+        </div>
+    </section>
+
+    <!-- Portfolio Section -->
+    <section class="portfolio" id="portfolio">
+        <div class="maintext">
+            <p>Portfolio</p>
+            <h2>Latest Projects</h2>
+        </div>
+
+        <div class="portfoliocontent">
+            <div class="row">
+
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Js -->
+    <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
