added project work

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
     <!-- About Section -->
     <section class="about" id="about">
         <div class="aboutimg">
-            <img src="img/user.jpg">
+            <img src="img/user.jpg" alt="picture of user">
         </div>
 
         <div class="aboutinfo">
