--- a/home.html
+++ b/home.html
@@ -49,12 +49,24 @@
     <section class="portfolio" id="portfolio">
         <div class="maintext">
             <p>Portfolio</p>
-            <h2>Latest Projects</h2>
+            <h2>My Projects</h2>
         </div>
 
         <div class="portfoliocontent">
             <div class="row">
+                <img src="img/ninteneleven.png" alt="ninteneleven website" width="75%">
+                <div class="layer">
+                    <h5>Website Development and Design</h5>
+                    <button class="button">Learn More</button><br>
+                </div>   
+            </div>
 
+            <div class="row">
+                <img src="img/Boom.png" alt="Booooooom website" width="75%">
+                <div class="layer">
+                    <h5>Website Content Redesign</h5>
+                    <button class="button">Learn More</button><br>
+                </div>   
             </div>
         </div>
     </section>
