removed services and added buttons with projects

--- a/home.html
+++ b/home.html
@@ -20,7 +20,6 @@
             <li><a href="home.html" class="active">Home</a></li>
             <li><a href="index.html">StyleGuide</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="#services">Services</a></li>
             <li><a href="#portfolio">Porfolio</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
@@ -54,18 +53,18 @@
 
         <div class="portfoliocontent">
             <div class="row">
-                <img src="img/ninteneleven.png" alt="ninteneleven website" width="75%">
+                <img src="img/ninteneleven.png" alt="ninteneleven website">
                 <div class="layer">
-                    <h5>Website Development and Design</h5>
-                    <button class="button">Learn More</button><br>
+                    <h2>Website Development and Design</h2>
+                    <button class="button">Learn More</button><br><br>
                 </div>   
             </div>
 
             <div class="row">
-                <img src="img/Boom.png" alt="Booooooom website" width="75%">
+                <img src="img/Boom.png" alt="Booooooom website">
                 <div class="layer">
-                    <h5>Website Content Redesign</h5>
-                    <button class="button">Learn More</button><br>
+                    <h2>Website Content Redesign</h2>
+                    <button class="button">Learn More</button><br><br>
                 </div>   
             </div>
         </div>
