--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     
     <!-- Header -->
     <header>
-        <a href="#" class="logo"> YuFeng.</a> 
+        <a href="home.html" class="logo"> YuFeng.</a> 
 
         <ul class="navlist">
             <li><a href="home.html" class="active">Home</a></li>
@@ -43,6 +43,38 @@
             <button class="button">Contact Me</button><br>
         </div>
     </section>
+
+  <!-- Footer/contact section -->
+    <footer> <!-- Footer learned from https://youtu.be/JViuPwlP1mU-->
+        <div class="container">
+            <div class="section-about-me">
+                <h2 class="header2">About Me</h2><br>
+                <p>Hello, I'm YuFeng. UI/UX Designer. Currently studying Intrative Arts and Technology at Simon Fraser University.</p>
+                <br><p>Copyright ©2023 YuFeng Diao. All Rights Reserved.</p>
+            </div>
+            <div class="section quicklinks">
+            </div>
+            <div class="section quicklinks">
+                <h2 class="header2">Content</h2>
+                <ul>
+                    <li><a href="index.html">StyleGuide</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                </ul>
+            </div>
+            <div class="section contact">
+                <h2 class="header2">Contact Me</h2>
+                <ul class="info">
+                    <li>
+                        <p><a href="tel:12345678900">+1 778 903 7988</a></p>
+                    </li>
+                    <li>
+                        <p><a href="mailto:yda58@sfu.ca">yda58@sfu.ca</a></p>
+                    </li>
+                </ul> 
+            </div>
+        </div>
+    </footer>
 
     <!-- Js -->
     <script type="text/javascript" src="js/script.js"></script>
