fixed where pages go and started on responsiveness

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             <li><a href="home.html" class="active">Home</a></li>
             <li><a href="index.html">StyleGuide</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="#portfolio">Porfolio</a></li>
+            <li><a href="portfolio.html">Porfolio</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
         
@@ -46,7 +46,7 @@
 
   <!-- Footer/contact section -->
     <footer> <!-- Footer learned from https://youtu.be/JViuPwlP1mU-->
-        <div class="container">
+        <div class="container" id="contact">
             <div class="section-about-me">
                 <h2 class="header2">About Me</h2><br>
                 <p>Hello, I'm YuFeng. UI/UX Designer. Currently studying Intrative Arts and Technology at Simon Fraser University.</p>
@@ -59,7 +59,7 @@
                 <ul>
                     <li><a href="index.html">StyleGuide</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="portfolio.html">Porfolio</a></li>
                 </ul>
             </div>
             <div class="section contact">
