--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
 
     <!-- Footer/contact section -->
     <footer> <!-- Footer learned from https://youtu.be/JViuPwlP1mU-->
-        <div class="container">
+        <div class="container" id="contact">
             <div class="section-about-me">
                 <h2 class="header2">About Me</h2><br>
                 <p>Hello, I'm YuFeng. UI/UX Designer. Currently studying Intrative Arts and Technology at Simon Fraser University.</p>
