made a working hamburger drop down nav

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         </ul>
         
         <!-- Hamburger icon-->
-        <div class="bx bx-menu" id="menu-icon">
+        <div class="bx bx-menu" id="hamburger-icon">
 
         </div>
     </header>
