--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
         </ul>
         
         <!-- Hamburger icon-->
-        <div class="bx bx-menu" id="menu-icon">
+        <div class="bx bx-menu" id="hamburger-icon">
 
         </div>
     </header>
