--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
         <ul class="navlist">
             <li><a href="home.html" class="active">Home</a></li>
             <li><a href="index.html">StyleGuide</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="portfolio.html">Porfolio</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
         
