--- a/home.html
+++ b/home.html
@@ -17,10 +17,10 @@
         <a href="home.html" class="logo"> YuFeng.</a> 
 
         <ul class="navlist">
-            <li><a href="home.html" class="active">Home</a></li>
+            <li><a href="#home" class="active">Home</a></li>
             <li><a href="index.html">StyleGuide</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="portfolio.html">Porfolio</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
         
