--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
             <li><a href="home.html" class="active">Home</a></li>
             <li><a href="index.html">StyleGuide</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="#portfolio">Porfolio</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
         
