--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
                 <img src="img/ninteneleven.png" alt="ninteneleven website">
                 <div class="layer">
                     <h2>Website Development and Design</h2>
-                    <button class="button">Learn More</button><br><br>
+                    <br><a href="ninteneleven.html" class="button">Learn More</a><br><br>
                 </div>   
             </div>
 
@@ -50,7 +50,7 @@
                 <img src="img/Boom.png" alt="Booooooom website">
                 <div class="layer">
                     <h2>Website Content Redesign</h2>
-                    <button class="button">Learn More</button><br><br>
+                    <br><a href="booooooom.html" class="button">Learn More</a><br><br>
                 </div>   
             </div>
         </div>
