added process analysis and reflection

--- a/ninteneleven.html
+++ b/ninteneleven.html
@@ -39,7 +39,19 @@
         <div class="aboutinfo">
             <h2>ninteneleven</h2>
             <h4>ninteneleven is a made up video game website created using HTML and CSS.</h4>
-            <p>Hey there, I'm YuFeng a fourth-year student studying Intrative Arts and Technology at Simon Fraser University. From an early age, I've been fascinated by the fusion of technology and design, and I've always sought ways to enhance user experiences. Through my studies and practical experiences, I've honed my eye for aesthetics and developed a deep passion for crafting seamless digital interactions. I'm eager to stay ahead of emerging trends and collaborate with peers in this ever-evolving field. My ultimate goal is to work with a tech company that values user-centric design, creating products that leave a lasting impact and delight users worldwide. As graduation nears, I'm excited to embrace new challenges and make my mark in the world of UX/UI design.</p>
+            <h1> Process Analysis</h1>
+            <p>We started with a detailed Style Guide Template, which became our design foundation. This guide covered everything from buttons to color schemes, ensuring a consistent look. Using these guidelines, we crafted the website's design, maintaining the meticulous templates we created. This approach gave the entire site a seamless and unified design, making navigation intuitive.</p>
+            <p>For effective collaboration and project oversight, we turned to GitKraken as our tool. This allowed us to track changes and progress systematically, streamlining our development process.</p>
+    
+            <p>After dedicated teamwork and persistent effort, we successfully completed the project. The end result is a visually appealing website that not only adheres to an engaging style guide but also offers six distinct pages. Each content card leads to its unique subpage, enhancing the user experience and showcasing the blend of design and functionality.</p>
+
+            <h1>Reflection</h1>
+            <p>Through this project, I gained valuable insights into the significance of design and user experience. Crafting a Style Guide Template taught me the importance of establishing clear design guidelines to maintain consistency. Translating these guidelines into the actual website design highlighted the balance between aesthetics and functionality.
+
+            One notable challenge we encountered was aligning our creative ideas with the limitations of web development. While we aimed for a seamless design, certain technical constraints required us to make adjustments. This challenge prompted us to find solutions that upheld the design's integrity. It underscored the need for adaptability and a collaborative approach, leading to a valuable learning experience in bridging the gap between design and implementation.</p>
+
+            <h1>Roles: Developer and Designer</h1>                
+            <h1>Team: YuFeng Diao & 1 other peer</h1>
         </div>
     </section>
 
