--- a/portfolio.html
+++ b/portfolio.html
@@ -62,6 +62,7 @@
             <div class="section-about-me">
                 <h2 class="header2">About Me</h2><br>
                 <p>Hello, I'm YuFeng. UI/UX Designer. Currently studying Intrative Arts and Technology at Simon Fraser University.</p>
+                <br><a href="https://github.com/YuFengDiao/P03" target="_blank">https://github.com/YuFengDiao/P03</a><br>
                 <br><p>Copyright ©2023 YuFeng Diao. All Rights Reserved.</p>
             </div>
             <div class="section quicklinks">
